# SWheg_ROS

./: .gitignore  readme.md
sensors/power_sensor/: CMakeLists.txt  package.xml
sensors/servo_control/: CMakeLists.txt
servo_control/: package.xml
servo_control/scripts/: servo_node.py  servos_node.py
stairs_playground/: CMakeLists.txt  package.xml
stairs_playground/launch/: playground.launch  spawn_stairs_playground.launch
stairs_playground/urdf/: stairs.xacro  stairs_base.xacro
stairs_playground/world/: empty.world
util/: CMakeLists.txt  SmoothnessCalcReal.py  SmoothnessCalcSim.py  package.xml  plot.py
util/csvlogs/: HexapodSync.csv  HexapodWalk.csv  HexapodWheel.csv  LegTripod.csv  QuadrupedStair.csv  QuadrupedTrot.csv  QuadrupedWalk.csv  QuadrupedWheel.csv  RhexGait2.csv  RhexTripod.csv  SWhegRipple.csv  Wheel.csv
wheelleg_control/: CMakeLists.txt  package.xml
wheelleg_control/msg/: JointData.msg  JointState.msg  WheelLegControlMsg.msg
wheelleg_control/scripts/: BasicTest.py  ChassisController.py  LegState.py  Motor.py  NewTest.py  RobotState.py  SmachTest.py  TransitionState.py  WheelState.py
wheelleg_description/: CMakeLists.txt  package.xml  urdf.rviz
wheelleg_description/launch/: display.launch
wheelleg_description/meshes/: Left.STL  LeftRimA.STL  LeftRimB.STL  Right.STL  RightRimA.STL  RightRimB.STL
wheelleg_description/proto/: WheelLeg.proto
wheelleg_description/urdf/: Hexapod.xacro  Quadraped.xacro  Segway.xacro  WheelLeg.gazebo  WheelLeg.urdf  WheelLeg.xacro  imu.xacro  readme.md
wheelleg_description/webots/: convert2webots.py
wheelleg_gazebo/: CMakeLists.txt  package.xml
wheelleg_gazebo/config/: WheelLegHexapod_control.yaml  WheelLegQuadraped_control.yaml  WheelLegSegway_control.yaml  WheelLeg_control.yaml
wheelleg_gazebo/launch/: WheelLegHexapod.launch  WheelLegQuadraped.launch  WheelLegSegway.launch  display.launch  gazebo.launch  stairs.launch  test.launch
wheelleg_gazebo/plugin/: draw_force_plugin.cc  foot_contact_plugin.cc
wheelleg_gazebo/scripts/: ChassisController.py  ChassisGazeboInterface.py  JointController.py  legWheelController.py
wheelleg_gazebo/world/: empty.world  test.world
wheelleg_gazebo/world/urdf/: stairs.xacro  test.xacro
wheelleg_hexa_rod/: CMakeLists.txt  package.xml
wheelleg_hexa_rod/launch/: robot.launch
wheelleg_hexa_rod/msg/: JointData.msg  MotorData.msg
wheelleg_hexa_rod/scripts/: linearController.py
wheelleg_hexa_rod/src/: ChassisController.cpp  ChassisController.hpp  MotorController.cpp
wheelleg_hexapod_control/: CMakeLists.txt  package.xml
wheelleg_hexapod_control/scripts/: SmachTest.py
wheelleg_quad/: CMakeLists.txt  package.xml
wheelleg_quad/launch/: robot.launch
wheelleg_quad/msg/: JointData.msg  MotorData.msg
wheelleg_quad/scripts/: linearController.py  servo.py  test.py  test0223.py
wheelleg_quad/scripts/scservo_sdk/: protocol_packet_handler.py  scservo_def.py
wheelleg_quad/src/: ChassisController.cpp  ChassisController.hpp  ChassisController_old.cpp  MotorController.cpp
wheelleg_quad/src/socketCan2/src/: M2006.cpp  M3508.cpp  Math.cpp
wheelleg_quadraped_control/: CMakeLists.txt  package.xml
wheelleg_quadraped_control/scripts/: BasicTest.py  Experiment.py  SmachTest.py
wheelleg_quadruped_control/: CMakeLists.txt  package.xml
wheelleg_real/: CMakeLists.txt  package.xml
wheelleg_segway_control/: CMakeLists.txt  package.xml
(+47 files in other folders)
