<package format="2">
  <name>wheelleg_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for ROMA WheelLeg</p>
    <p>This package contains configuration data, 3D models and launch files
for fourLegsTransformable robot</p>
  </description>
  <author>Xiaohan Liu</author>
  <license>BSD</license>
  <maintainer email="11911925@main.sustech.edu.cn" />
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>